# gpu_propagator

./: .gitmodules  CMakeLists.txt  README.md  config.json
cmake/: BuildGLSL.cmake  BuildSPIRV.cmake  process_glsl.py
shaders/: CMakeLists.txt  helix_blue_f.frag  helix_g_const.geom  helix_g_const_barrel.geom  helix_g_glsl.geom  helix_geom_code.glsl  helix_v.vert  propagator.glsl  propagator_config.glsl  shaders_config.glsl
shaders/mag_field/: field_const.glsl  field_const_barrel.glsl  field_glsl.glsl  mag_cheb.glsl  measurements.glsl
src/: CMakeLists.txt  main.cpp  render_task.cpp  render_task.h
src/common/: CMakeLists.txt  config.cpp  context_egl.cpp  context_glfw.cpp  debug_save_frame.cpp  shader.cpp
src/common/include/: config.h  context_base.h  context_egl.h  context_glfw.h  debug_save_frame.h  glm_helper.h  logger.h  shader.h
src/mag_field/: CMakeLists.txt  glsl.cpp  mag_cheb.cpp
src/mag_field/include/: glsl.h  mag_cheb.h  measurements.h
src/propagator/: CMakeLists.txt  helix.cpp  propagator.cpp
src/propagator/include/: helix.h  propagator.h
